crates/zizmor/tests/integration/snapshots/integration__snapshot__unpinned_uses-12.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
expression: "zizmor().expects_failure(true).config(input_under_test(&format!(\"unpinned-uses/configs/{tc}.yml\",))).input(input_under_test(\"unpinned-uses/menagerie-of-uses.yml\")).run()?"
---
fatal: no audit was performed
failed to load config file at `@@CONFIG@@`

Caused by:
    0: invalid `unpinned-uses` config
    1: cannot use exact ref patterns here: `foo/bar@v1`
