crates/zizmor/tests/integration/snapshots/integration__snapshot__unpinned_uses-4.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
assertion_line: 185
expression: "zizmor().input(input_under_test(\"unpinned-uses/issue-433-repro.yml\")).args([\"--pedantic\"]).run()?"
---
group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
No findings to report. Good job!
