crates/zizmor/tests/integration/snapshots/integration__snapshot__unpinned_uses-8.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
expression: "zizmor().expects_failure(true).config(input_under_test(&format!(\"unpinned-uses/configs/{tc}.yml\",))).input(input_under_test(\"unpinned-uses/menagerie-of-uses.yml\")).run()?"
snapshot_kind: text
---
fatal: no audit was performed
invalid unpinned-uses configuration

Caused by:
    invalid pattern: foo/
