crates/zizmor/tests/integration/snapshots/integration__snapshot__unpinned_uses-9.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
expression: "zizmor().expects_failure(true).config(input_under_test(&format!(\"unpinned-uses/configs/{tc}.yml\",))).input(input_under_test(\"unpinned-uses/menagerie-of-uses.yml\")).run()?"
---
fatal: no audit was performed
configuration error in @@CONFIG@@

Caused by:
    0: invalid syntax for audit `unpinned-uses`
    1: invalid pattern: */foo
