crates/zizmor/tests/integration/snapshots/integration__snapshot__use_trusted_publishing-5.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
assertion_line: 310
expression: "zizmor().input(input_under_test(\"use-trusted-publishing/issue-1191-repro.yml\")).run()?"
---
No findings to report. Good job! (4 suppressed)
